<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/albumImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAudioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/audioSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/audioSeekBar"
        app:layout_constraintEnd_toEndOf="@+id/textAudioTitle"
        app:layout_constraintStart_toStartOf="@+id/textAudioTitle"
        app:layout_constraintTop_toBottomOf="@+id/textAudioTitle"
        app:layout_constraintVertical_bias="0.16000003" />

    <SeekBar
        android:id="@+id/audioSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textCurrentPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="00:00"
        app:layout_constraintStart_toStartOf="@id/audioSeekBar"
        app:layout_constraintTop_toBottomOf="@id/audioSeekBar" />

    <TextView
        android:id="@+id/textAudioDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="@id/audioSeekBar"
        app:layout_constraintTop_toBottomOf="@id/audioSeekBar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.87">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/previousButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/quantum_ic_skip_previous_white_36"
            android:tint="@color/black_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/playButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/quantum_ic_play_arrow_grey600_36"
                android:tint="@color/black_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/pauseButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/quantum_ic_pause_grey600_36"
                android:tint="@color/black_color"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/quantum_ic_skip_next_grey600_36"
            android:tint="@color/black_color" />
    </LinearLayout>

    <androidx.mediarouter.app.MediaRouteButton
        android:id="@+id/mediaRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintBottom_toTopOf="@id/textAudioTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumImage" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/playBackModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparentColor"
        android:src="@drawable/arrow_right_alt_24"
        app:layout_constraintBottom_toTopOf="@id/textAudioTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/mediaRouteButton"
        app:layout_constraintTop_toBottomOf="@id/albumImage" />

</androidx.constraintlayout.widget.ConstraintLayout>