<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.audioplayerlibaray.audioplayer.PlayerDetailFragment">

    <Spinner
        android:id="@+id/customLayoutsSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/containerAudioView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.nabin0.audioplayer.view.AudioPlayer
            android:id="@+id/audioPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customLayoutsSpinner" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>